--- a/appsrc/AppFVC/AppFVC/Views/RegisterPage.xaml
+++ b/appsrc/AppFVC/AppFVC/Views/RegisterPage.xaml
@@ -118,7 +118,7 @@
                     <Label Grid.Row="9" Grid.Column="1" x:Name="lbPref" Text="Desejo receber notificações da prefeitura." FontSize="12" TextColor="#4F4F4F" VerticalOptions="StartAndExpand" ></Label>
                     
                     <Label Grid.Row="10" Grid.ColumnSpan="2" Margin="10,0,10,5" Text="{Binding Erro}" HorizontalTextAlignment="Center" TextColor="#EB5757" IsVisible="{Binding IVErro}" FontSize="11"></Label>
-                    <Button Grid.Row="11" Grid.ColumnSpan="2" Margin="0,10,0,0" Command="{Binding NavegarNext}"   Style="{StaticResource ButtonNextStyle}" Text="Próximo" VerticalOptions="End" HorizontalOptions="CenterAndExpand"></Button>
+                    <Button Grid.Row="11" Grid.ColumnSpan="2" Margin="0,10,0,0" Command="{Binding NavegarNext}" Style="{StaticResource ButtonNextStyle}" BackgroundColor="{Binding ButtonColor}" Text="Próximo" VerticalOptions="End" HorizontalOptions="CenterAndExpand"></Button>
                
                 </Grid>
                 
